--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -12,7 +12,7 @@
 
 \chapter{Introduction}
 \label{ch:Introduction}
-During software development, many artifacts are created, ranging from the actual project code through documentation to a multitude of formal and informal diagrams. Trace link recovery aims to link these artifacts across different domains or versions. Challenges such as inconsistent naming are frequent issues in software projects \cite{wohlrab2019ImprovingConsistency}. Trace link recovery approaches need to be able to deal with such hardships. \cref{fig:artifact_overview} provides an overview of how these artifacts might look like.
+During software development, many artifacts are created, ranging from the actual project code through documentation to a multitude of formal and informal diagrams. \TLR aims to link these artifacts across different domains or versions. Challenges such as inconsistent naming are frequent issues in software projects \cite{wohlrab2019ImprovingConsistency}. \TLR approaches need to be able to deal with such hardships. \autoref{fig:artifact_overview} provides an overview of what these artifacts might look like for example.
 
 \begin{figure}
     \centering
@@ -21,9 +21,9 @@ During software development, many artifacts are created, ranging from the actual
     \label{fig:artifact_overview}
 \end{figure}
 
-Large language models (LLM) have made rapid advancements in recent years. They are becoming increasingly popular to deal with trace link recovery tasks and have shown very promising results. As they are still unable to reason and think on their own \cite{shojaee2025IllusionThinking}, prompt engineering is required to extract good results. Manually determining prompts suited for each specific problem is a quite tedious and time intensive task. 
+\LLMs have made rapid advancements in recent years. They are becoming increasingly popular for dealing with \TLR tasks and have shown very promising results so far. As they are still unable to reason and think on their own \cite{shojaee2025IllusionThinking}, prompt engineering is required to extract good results. However, manually determining prompts suited for each specific problem is quite a tedious, time- and labor-intensive task.
 
 To address this shortcoming, automated prompt engineering tools can be used. They will typically use the LLM itself to determine suitable adjustments or generate new prompts based on a description or training data of the problem \cite{ramnath2025SystematicSurvey}.
 
-The LiSSA framework \cite{fuchss2025LiSSAGeneric} ....
+The LiSSA framework \cite{fuchss2025LiSSAGeneric} \textit{todo: ....}
 I will contribute an automatic prompt refinement algorithm, hoping to improve trace recovery, especially for larger projects in the requirements to requirements domain.
