Update on Overleaf.

--- a/presentation.tex
+++ b/presentation.tex
@@ -121,7 +121,7 @@ Modelling for Continuous Software Engineering (MCSE), Supervisor:  M.Sc. Dominik
 
 
             %Crosssection
-            \node[draw, align=center] at (1.75, -1.35) {\textbf{my work}};
+            \node[draw, align=center] at (1.75, -1.25) {\large\textbf{my work}};
             \end{scope}
 
         %\draw[help lines](-14,6) grid (14,-6);
