--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -5,9 +5,17 @@ This work rests at the intersection of two different fields of study. On the one
 
 \section{Trace Link Recovery}
 \label{related:sec:tlr}
+
+Before the emergence of machine learning and \LLMs \textit{todo expand}
+
+\citewithauthor{delucia2012InformationRetrieval} have written about different \IR methods and their performance. \textit{Todo: Maybe write about the paper?}
+
+
 \citewithauthor{keim2021TraceLink} have proposed cross domain trace link recovery using agent like algorithms. \textit{Todo: Maybe read the paper?}
 
-In previous work by \citewithauthor{fuchss2025LiSSAGeneric}, simple handwritten prompts by \citewithauthor{ewald2024RetrievalAugmentedLarge} were used to recover trace links between software documentation and architectural diagrams. They have proven, that they can outperform other state-of-the-art for code tasks. 
+
+
+In previous work by \citewithauthor{fuchss2025LiSSAGeneric}, simple handwritten prompts by \citewithauthor{ewald2024RetrievalAugmentedLarge} were used to recover trace links between software documentation and architectural diagrams. They have proven that they can outperform other state-of-the-art for code tasks. 
 
 \citewithauthor{hey2025RequirementsTraceability} have used these same prompts for \TLR in the domain of requirements to requirements. While they were also able to outperform state-of-the-art approaches, the recall rate for larger data sets still has room for improvement.
 
