--- a/01_Proposal/Document/sections/approach.tex
+++ b/01_Proposal/Document/sections/approach.tex
@@ -10,20 +10,20 @@ The class \verb|classifier| is an abstraction of all classifiers. It provides ba
 
 \ToT is a prompting technique exploring more different branches of thoughts than typical \CoT prompts. As illustrated in \autoref{fig:ToT_visualization} 
 
-The prompts by \citewithauthor{hulbert2023UsingTreeofThought} aim to simplify \ToT prompting into a singular request, instead of chaining multiple calls. I will use one of their prompts. The benchmark data to compare \ToT prompting with the existing zero-shot and \CoT classifiers also exists in a public repository \cite{fuchss2022ArDoCoBenchmark}. 
+The prompts by \citewithauthor{hulbert2023UsingTreeofThought} aim to simplify \ToT prompting into a singular request, instead of chaining multiple calls. I will use one of their prompts. The benchmark data to compare \ToT prompting with the existing zero-shot and \CoT classifiers also exists in a public repository~\cite{fuchss2022ArDoCoBenchmark}.
 
 This work package has two major goals. Foremost, to get confident and set up with the general project structure and benchmark data. This will be a prerequisite for all future work in the LiSSA framework. Second, this will broaden the baseline to compare later results and possible improvements against.
 
 \begin{figure}
     \centering
-    \includegraphics[width=\linewidth]{graphics/ToT_Yao.png}
+    \includegraphics[width=\linewidth]{graphics/ToT_Yao}
     \caption{Tree of Thought visualization by \citewithauthor{yao2023TreeThoughts}}
     \label{fig:ToT_visualization}
 \end{figure}
 
 \section{Naive Iterative Optimizing Classifier}
 \label{approach:sec:naive_iterative}
-\textbf{How:} Another quick classifier implementation will be the simplest automatic iterative prompt optimization algorithm. The same existing abstract \verb|classifier| class can be used as in \ref{phase_initial_overview} to provide basic functionality for the iteratively optimized classifier.
+\textbf{How:} Another quick classifier implementation will be the simplest automatic iterative prompt optimization algorithm. The same existing abstract \verb|classifier| class can be used as in~\ref{phase_initial_overview} to provide basic functionality for the iteratively optimized classifier.
 
 Next, a function $f$ will be required to quantify the result of the current prompt $p$ iteration, called to a large language model $llm$. The simple approach here is to use the successful retrieval rate, by dividing the amount of correctly classified trace links by the total amount of recoverable trace links.
 The function $f$ will need to have the same range for any set of training data to ensure the threshold value $t$ will always be viable.
@@ -39,19 +39,19 @@ To improve the performance, an optimization prompt is used. The naive approach i
 
 \begin{figure}
     \centering
-    \includesvg[width=0.7\linewidth]{graphics/iterative_core_loop.drawio}
+    \includesvg[width=0.7\linewidth]{graphics/iterative_core_loop}
     \caption{Visualization of a simple iterative optimization algorithm}
     \label{fig:iterative_core_loop}
 \end{figure}
 
-\textbf{Why:} Implementing this naive iteratively optimized classifier will yield fast results to evaluate later, even if more complicated implementations might fail. The core concepts also apply for \ref{phase_gradient_descent} and can be reused. 
+\textbf{Why:} Implementing this naive iteratively optimized classifier will yield fast results to evaluate later, even if more complicated implementations might fail. The core concepts also apply for~\ref{phase_gradient_descent} and can be reused.
 
 
 \section{Automatic Prompt Optimization with Gradient Descent}
 \label{approach:sec:gradient_descent}
 \textbf{How:} The authors have provided their python source code in a publicly accessible repository\footnote{https://github.com/microsoft/LMOps/tree/main/prompt\_optimization} under the MIT licensing. The project code can be of great help when adapting their algorithm to the LiSSA java framework.
 
-The existing iterative optimization implementation from \ref{phase_naive_iterative} can be used as foundations for the implementation, as the core concepts remain the same. Refer to \ref{sec:gradient_descent} for details of the gradient descent based optimization algorithm. The actual implementation of gradient descent will be the main focus here, in order to steer optimized prompts in the right direction.
+The existing iterative optimization implementation from~\ref{phase_naive_iterative} can be used as foundations for the implementation, as the core concepts remain the same. Refer to~\ref{sec:gradient_descent} for details of the gradient descent based optimization algorithm. The actual implementation of gradient descent will be the main focus here, in order to steer optimized prompts in the right direction.
 
 
 \textbf{Why:} The primary idea of this thesis is to explore automated optimization. The naive approach may yield good results already. Feeding more information and processing logic into the optimization system is expected to present better results. Especially suitable results may be reached faster by doing more processing on the machine instead of expensive API calls to the large language model.
@@ -59,7 +59,7 @@ The existing iterative optimization implementation from \ref{phase_naive_iterati
 
 \section{Evaluation}
 \label{approach:sec:evaluation}
-\textbf{How:} Precision and recall are key measures for information retrieval tasks \cite{hayes2006AdvancingCandidate}. 
+\textbf{How:} Precision and recall are key measures for information retrieval tasks~\cite{hayes2006AdvancingCandidate}.
 
 \textit{TODO: Explain these metricize and how they are calculated instead of direct quoting and format formulas} 
 \directQuote[sec. 7.1]{Precision measures the ratio of correctly predicted links and all predicted links. Recall measures the ratio of correctly predicted links and all relevant documents. It shows an approach’s ability to provide correct trace links. The F1 score is the harmonic mean of precision and recall. The Metrics are calculated in the following way, where TP is true positives, FP is false positives, and FN is false negatives.}{ewald2024RetrievalAugmentedLarge}
