--- a/01_Proposal/Document/sections/foundations.tex
+++ b/01_Proposal/Document/sections/foundations.tex
@@ -14,9 +14,9 @@ While \LLMs can overcome these inconsistencies, finding suitable prompts might b
 
 \section{Definition of Automated Prompt Engineering}
 \label{foundations:sec:automated_prompt_engineering}
-Prompt engineering is the process of refining a prompt for a specific use case. This is typically done in a non-systematic, manual manner. \APE enables \LLMs to refine the initial prompt to optimize their performance \cite{zadenoori2025AutomaticPrompt}. 
+Prompt engineering is the process of refining a prompt for a specific use case. This is typically done in a non-systematic, manual manner. \APE enables \LLMs to refine the initial prompt to optimize their performance~\cite{zadenoori2025AutomaticPrompt}.
 
-Typically, \APE processes are iterated to improve previous results further \citeiterative. An illustration of the core concept and how it can be implemented will be shown in \autoref{approach:sec:naive_iterative} and  \autoref{fig:iterative_core_loop}.
+Typically, \APE processes are iterated to improve previous results further \citeiterative. An illustration of the core concept and how it can be implemented will be shown in \autoref{approach:sec:naive_iterative} and \autoref{fig:iterative_core_loop}.
 
 In general, the refinement process will start with some initial prompt. It needs to be selected first before any optimization can occur. This prompt can be chosen manually. This approach is very intuitive. However, human interaction is still required to choose this first prompt. 
 \citewithauthor{zhou2023LargeLanguage} propose using \LLMs to automate this process and generate the initial prompt. They prompt the model to generate a likely set of instructions, also called candidates. The instructions will achieve good results when prompted with a batch of input/output pairs. These pairs of input/output data will be processed as text by the \LLM, pre- and or post-processing may be required.
@@ -35,8 +35,8 @@ Once any candidate performs better than some threshold value or a maximum number
 
 \begin{figure}
 \centering
-\includesvg[width=0.7\linewidth]{graphics/gradient_descent.drawio}
-\caption{Overview of the iterative optimization loop in \cite{pryzant2023AutomaticPrompt}}
+\includesvg[width=0.7\linewidth]{graphics/gradient_descent}
+\caption{Overview of the iterative optimization loop in~\cite{pryzant2023AutomaticPrompt}}
 \label{fig:gradient_descent}
 TODO: 
 \begin{itemize}
@@ -57,9 +57,9 @@ In addition, they broaden their candidates further by paraphrasing them into sem
 
 
 \subsection{Candidate Selection}
-To select candidates for the next iteration, \citeauthor{pryzant2023AutomaticPrompt} apply a beam search algorithm. Beam search is a heuristic best-first graph search algorithm to select a fixed number of promising paths. The remaining paths will be discarded to allocate resources to more promising paths instead. \cite{BeamSearch} A heuristic algorithm finds a good result efficiently, with the trade-off that it is not guaranteed to be optimal. The selection of the most promising candidates is quite resource-intensive for the entire data set, since many calls to preferably larger \LLMs are required. As the problem is quite similar to the best arm identification in multi-armed bandit optimization by \citewithauthor{audibert2010BestArm}, they rely on this well-studied problem instead.
+To select candidates for the next iteration, \citeauthor{pryzant2023AutomaticPrompt} apply a beam search algorithm. Beam search is a heuristic best-first graph search algorithm to select a fixed number of promising paths. The remaining paths will be discarded to allocate resources to more promising paths instead~\cite{BeamSearch}. A heuristic algorithm finds a good result efficiently, with the trade-off that it is not guaranteed to be optimal. The selection of the most promising candidates is quite resource-intensive for the entire data set, since many calls to preferably larger \LLMs are required. As the problem is quite similar to the best arm identification in multi-armed bandit optimization by \citewithauthor{audibert2010BestArm}, they rely on this well-studied problem instead.
 
-The multi-armed bandit problem consists of $N$ stochastically independent probability distributions $\{ D_1, \dots, D_N\}$ with corresponding expected values and variances. These distributions are unknown to the user initially. The goal is to maximize the sum of rewards for each pull from the set of probability distributions, utilizing the knowledge gained through previous pulls \cite{kuleshov2014AlgorithmsMultiarmeda}. 
+The multi-armed bandit problem consists of $N$ stochastically independent probability distributions $\{ D_1, \dots, D_N\}$ with corresponding expected values and variances. These distributions are unknown to the user initially. The goal is to maximize the sum of rewards for each pull from the set of probability distributions, utilizing the knowledge gained through previous pulls~\cite{kuleshov2014AlgorithmsMultiarmeda}.
 It is an analogy to multiple one-armed bandit slot machines. Pulling a lever on one of these slot machines does not affect the others but costs noticeable resources. The optimization aims to find the best-performing arms with as few pulls as possible. 
 
 \citeauthor{pryzant2023AutomaticPrompt} have used the successive rejects algorithm by \citewithauthor{audibert2010BestArm} to select the best prompt candidates for the next iteration step. The set of current candidates $S$ is therefore initialized with all $k$ candidate prompts in the iteration step. Depending on the budget for sampling, candidates and remaining candidates in $S$ will be prompted with $n_k$ pairs of the training data. The results are evaluated with a metric function $m$ to quantify the performance. For example, $m$ can be a simple binary function as seen in \autoref{eq:sample_binary_metric}. If the prompt $p$ provides the expected output $y$ for a given input $x$, one is returned. Otherwise, zero will be returned.
