--- a/01_Proposal/Slides/presentation.bib
+++ b/01_Proposal/Slides/presentation.bib
@@ -54,6 +54,22 @@
   langid = {english}
 }
 
+@inproceedings{aung2020LiteratureReview,
+  title = {A {{Literature Review}} of {{Automatic Traceability Links Recovery}} for {{Software Change Impact Analysis}}},
+  booktitle = {Proceedings of the 28th {{International Conference}} on {{Program Comprehension}}},
+  author = {Aung, Thazin Win Win and Huo, Huan and Sui, Yulei},
+  date = {2020-07-13},
+  pages = {14--24},
+  publisher = {ACM},
+  location = {Seoul Republic of Korea},
+  doi = {10.1145/3387904.3389251},
+  url = {https://dl.acm.org/doi/10.1145/3387904.3389251},
+  urldate = {2025-06-21},
+  eventtitle = {{{ICPC}} '20: 28th {{International Conference}} on {{Program Comprehension}}},
+  isbn = {978-1-4503-7958-8},
+  langid = {english}
+}
+
 @online{BeamSearch,
   title = {Beam Search from {{FOLDOC}}},
   url = {https://foldoc.org/beam+search},
@@ -87,6 +103,23 @@
   urldate = {2025-06-21},
   pubstate = {prepublished},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning}
+}
+
+@incollection{delucia2012InformationRetrieval,
+  title = {Information {{Retrieval Methods}} for {{Automated Traceability Recovery}}},
+  booktitle = {Software and {{Systems Traceability}}},
+  author = {De Lucia, Andrea and Marcus, Andrian and Oliveto, Rocco and Poshyvanyk, Denys},
+  editor = {Cleland-Huang, Jane and Gotel, Orlena and Zisman, Andrea},
+  date = {2012},
+  pages = {71--98},
+  publisher = {Springer},
+  location = {London},
+  doi = {10.1007/978-1-4471-2239-5_4},
+  url = {https://doi.org/10.1007/978-1-4471-2239-5_4},
+  urldate = {2025-06-21},
+  isbn = {978-1-4471-2239-5},
+  langid = {english},
+  keywords = {Candidate Link,Information Retrieval,Software Artifact,Traceability Link,Traceability Recovery}
 }
 
 @online{ewald2024RetrievalAugmentedLarge,
