Update on Overleaf.

--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -15,7 +15,7 @@ Before the emergence of machine learning and \LLMs \textit{todo expand}
 
 
 
-In previous work by \citewithauthor{fuchss2025LiSSAGeneric}, simple handwritten prompts by \citewithauthor{ewald2024RetrievalAugmentedLarge} were used to recover trace links between software documentation and architectural diagrams. They have proven that they can outperform other state-of-the-art for code tasks. 
+In previous work by \citewithauthor{fuchss2025LiSSAGeneric}, simple prompts by \citewithauthor{ewald2024RetrievalAugmentedLarge} were used to recover trace links between software documentation and architectural diagrams. These prompts were manually designed and formulated. They have proven that they can already outperform other state-of-the-art approaches for source code related \TLR domains. 
 
 \citewithauthor{hey2025RequirementsTraceability} have used these same prompts for \TLR in the domain of requirements to requirements. While they were also able to outperform state-of-the-art approaches, the recall rate for larger data sets still has room for improvement.
 
